tests/snapshots/examples_fixtures/type_system__failing__208_stage_type_suppresses_effect.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/208_stage_type_suppresses_effect.flx
== compile ==
failed (compile)
== diagnostics ==
error[E406]: Unhandled Root Effect

`fn main` has undischarged effects: Mystery.

  examples/type_system/failing/208_stage_type_suppresses_effect.flx:13:1
   |
13 | fn main() with IO {
   | ^^^^^^^^^^^^^^^^^
   | ----------------- undischarged effects at root boundary

Hint:
  Handle these effects explicitly with `... handle Effect { ... }` before returning from `main`.


error[E300]: Argument Type Mismatch

I found the wrong type in the 1st argument to `greet`.

  examples/type_system/failing/208_stage_type_suppresses_effect.flx:14:17
   |
 5 | fn greet(name: String) -> String {
   | -------------------------------- `greet` expects `String` as the 1st parameter
 6 |     "Hello, #{name}!"
 7 | }
... |
12 | 
13 | fn main() with IO {
14 |     print(greet(42))
   |                 ^^
   |                 -- this argument has type `Int`

Note:
  expected argument type: String
  found argument type: Int
  the actual argument type is inferred from this expression
  the expected argument type comes from the function signature

Help:
  Try `to_string(...)` to convert a `Int` into a `String`.


Note: Downstream Errors Suppressed

I hid 2 later-stage diagnostics (2 effect) because earlier errors make them less reliable. Fix the earlier errors first, or use `--all-errors` to see everything.

Found 2 errors.
== stdout ==
<not executed>
